[project]
name = "statistics_core_lokas7755"
version = "0.0.1"
authors = [
  { name="loka shafeek"},
]
description = "statistics bot core to use it as package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LokasWiki/statistics-core"
"Bug Tracker" = "https://github.com/LokasWiki/statistics-core/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"